[기영]api 작업
